--- a/style.css
+++ b/style.css
@@ -12,7 +12,37 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  min-height: 100vh;
   background-color: brown;
+  padding: 0 35px;
+}
+
+.wrapper {
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.wrapper .carousel {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: calc(100% / 3);
+  overflow: hidden;
+  gap: 16px;
+  max-width: 1100px;
+}
+
+.carousel .item {
+  height: 200px;
+  border-radius: 8px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: antiquewhite;
 }
 
 .item .img img {
