--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-color: brown;
+  background-color: antiquewhite;
   padding: 0 35px;
 }
 
@@ -21,8 +21,21 @@ body {
   width: 100%;
 
   display: flex;
+  flex-flow: column;
   align-items: center;
   justify-content: center;
+}
+
+.superior {
+  width: 60%;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em;
+}
+
+.superior .botones {
 }
 
 .wrapper .carousel {
@@ -35,18 +48,16 @@ body {
 }
 
 .carousel .item {
-  height: 200px;
   border-radius: 8px;
 
   display: flex;
-  align-items: center;
+  align-items: left;
   justify-content: center;
   flex-direction: column;
-  background-color: antiquewhite;
 }
 
 .item .img img {
-  width: 140px;
-  height: 140px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
