--- a/style.css
+++ b/style.css
@@ -18,43 +18,67 @@ body {
 }
 
 .wrapper {
+  max-width: 1100px;
   width: 100%;
 
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: whitesmoke;
 }
 
 .superior {
-  width: 60%;
+  width: 100%;
   display: flex;
   flex-flow: row;
   justify-content: space-between;
   align-items: center;
-  padding: 1em;
 }
 
 .wrapper .carousel {
+  width: 100%;
   display: grid;
   grid-auto-flow: column;
-  grid-auto-columns: calc(100% / 3);
-  overflow: hidden;
+  grid-auto-columns: calc((100% / 3));
   gap: 16px;
-  max-width: 1100px;
+  overflow: hidden;
 }
 
 .carousel .item {
+  height: 342px;
   border-radius: 8px;
 
   display: flex;
-  align-items: left;
+  align-items: center;
   justify-content: center;
   flex-direction: column;
 }
 
 .item .img img {
-  width: 100%;
-  height: 100%;
+  width: 140px;
+  height: 140px;
   object-fit: cover;
+}
+
+.item h2 {
+  font-weight: 500;
+  font-size: 1.58rem;
+}
+
+.item span {
+  color: grey;
+  font-size: 1.2rem;
+}
+
+@media screen and (max-width: 920px) {
+  .wrapper .carousel {
+    grid-auto-columns: calc((100% / 2));
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .wrapper .carousel {
+    grid-auto-columns: 100%;
+  }
 }
