--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
 }
 
 .wrapper {
-  max-width: 1100px;
   width: 100%;
 
   display: flex;
@@ -40,10 +39,19 @@ body {
   width: 100%;
   display: grid;
   grid-auto-flow: column;
-  grid-auto-columns: calc((100% / 3));
+  grid-auto-columns: calc((100% / 5));
   gap: 1em;
   overflow: hidden;
-  padding: 1em;
+
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  overflow-x: auto;
+  scrollbar-width: none;
+}
+
+.carousel.dragging {
+  scroll-snap-type: none;
+  scroll-behavior: auto;
 }
 
 .carousel.dragging .item {
@@ -59,7 +67,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: aquamarine;
+
+  scroll-snap-align: start;
 }
 
 .item .img img {
@@ -80,11 +89,11 @@ body {
 
 @media screen and (max-width: 920px) {
   .wrapper .carousel {
-    grid-auto-columns: calc((100% / 2));
+    grid-auto-columns: calc((100% / 3));
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
   .wrapper .carousel {
     grid-auto-columns: 100%;
   }
